--- a/app/src/main/res/layout/layout_chat_mine.xml
+++ b/app/src/main/res/layout/layout_chat_mine.xml
@@ -26,6 +26,7 @@
         android:layout_toLeftOf="@id/chat_item_user_image"
         android:layout_marginLeft="5dp">
         <LinearLayout
+            android:id="@+id/chat_item_text_message_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -51,6 +52,31 @@
                 android:gravity="right"
                 android:padding="16dp"/>
         </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/chat_item_voice_message_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="14dp"
+            android:visibility="gone">
+            <ImageView
+                android:id="@+id/chat_item_voice_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/vector_drawable_chat_voice_mine_logo"
+                android:layout_centerVertical="true"/>
+            <TextView
+                android:id="@+id/chat_item_voice_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/chat_item_voice_img"
+                android:textSize="18sp"
+                android:layout_marginLeft="30dp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/iconTextColor"
+                android:layout_marginRight="5dp"
+                android:text="1s"
+                />
+        </RelativeLayout>
     </me.himanshusoni.chatmessageview.ChatMessageView>
 </RelativeLayout>
 
