--- a/app/src/main/res/layout/layout_chat_other.xml
+++ b/app/src/main/res/layout/layout_chat_other.xml
@@ -26,9 +26,11 @@
         android:layout_marginLeft="5dp"
         android:elevation="3dp">
         <LinearLayout
+            android:id="@+id/chat_item_text_message_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
             <ImageView
                 android:id="@+id/chat_item_image"
                 android:layout_width="wrap_content"
@@ -37,7 +39,7 @@
                 android:src="@mipmap/admin"
                 android:contentDescription="@string/chat_message_left_text"
                 android:visibility="gone"
-                android:padding="7dp"/>
+                android:padding="5dp"/>
             <TextView
                 android:id="@+id/chat_item_message"
                 android:layout_width="wrap_content"
@@ -50,6 +52,30 @@
                 android:padding="16dp"
                 android:gravity="left" />
         </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/chat_item_voice_message_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="14dp"
+            android:visibility="gone">
+            <ImageView
+                android:id="@+id/chat_item_voice_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/vector_drawable_chat_voice_other_logo" />
+            <TextView
+                android:id="@+id/chat_item_voice_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/chat_item_voice_img"
+                android:textSize="18sp"
+                android:layout_marginLeft="30dp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/iconTextColor"
+                android:layout_marginRight="5dp"
+                />
+        </RelativeLayout>
     </me.himanshusoni.chatmessageview.ChatMessageView>
 </RelativeLayout>
 
